k8s/grading-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sinnts-grading
  namespace: staging
spec:
  replicas: 10
  selector:
    matchLabels:
      app: sinnts-grading
  template:
    metadata:
      labels:
        app: sinnts-grading
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: sinnts-grading
          image: dhannun/apps:grading-v1.0.0-54
          ports:
            - containerPort: 2024
          livenessProbe:
            httpGet:
              path: /api/v1/ping
              port: 2024
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/v1/ping
              port: 2024
            initialDelaySeconds: 30
            periodSeconds: 10
