k8s/grading-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sinnts-grading
  namespace: staging
spec:
  selector:
    app: sinnts-grading
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2024
  type: ClusterIP
