k8s/grading-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grading-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: dev.touchit.com.ng
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sinnts-grading
                port:
                  number: 80
